# ChatRoomOS-2021-2022

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
src/: common.h
src/client/: client.cpp
src/common/: communication.h  error_handling.cpp  error_handling.h  exit_codes.h  message.h
src/server/: chat_room.cpp  chat_room.h  client.cpp  client.h  clients_set.cpp  clients_set.h  server.cpp  server_usage.h  username.cpp  username.h
